demo/python/flask/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-network-policy
  namespace: dev
spec:
  podSelector:  # Select all
    matchLabels:
      owner: rammus
  policyTypes:
  - Ingress
  - Egress
  # ingress:
  # - {}
  # # - from:
  # #   - ipBlock:
  # #       cidr: 172.17.0.0/16
  # #       except:
  # #       - 172.17.1.0/24
  # #   - namespaceSelector:
  # #       matchLabels:
  # #         project: myproject
  # #   - podSelector:
  # #       matchLabels:
  # #         role: frontend
  # #   ports:
  # #   - protocol: TCP
  # #     port: 6379
  # egress:
  # - to:
  #   - namespaceSelector:
  #       matchLabels:
  #         purpose: api
  #     podSelector:
  #       matchLabels:
  #         app: echo
